--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Title -->
-    <title>CloudNative Limited</title>
+    <title>DataDriven Limited</title>
 
     <!-- Required Meta Tags Always Come First -->
     <meta charset="utf-8">
@@ -117,7 +117,7 @@
             <div class="info-v3-4 g-theme-bg-blue-dark-v1-opacity-0_9 g-pa-20 g-pa-60--md">
               <div class="g-pos-rel g-z-index-3">
                 <h3 class="h3 text-uppercase g-letter-spacing-3 g-font-size-default g-color-white g-mb-10">Business &amp; Corporation</h3>
-                <h2 class="h2 text-uppercase g-color-white g-letter-spacing-5 g-font-weight-400 g-font-size-25 g-font-size-35--md g-mb-20">We are CloudNative</h2>
+                <h2 class="h2 text-uppercase g-color-white g-letter-spacing-5 g-font-weight-400 g-font-size-25 g-font-size-35--md g-mb-20">We are DataDriven</h2>
                 <p class="g-line-height-1_8 g-letter-spacing-3 g-color-white g-mb-20">Website under construction</p>
                 <a href="#" class="btn text-uppercase u-btn-outline-white rounded-0">Learn More</a>
               </div>
@@ -1094,12 +1094,12 @@
               <div class="col-sm-3 g-brd-top g-brd-top-none--md g-brd-left--md g-brd-primary g-px-15 g-py-30 g-py-0--md">
                 <i class="icon-envelope d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
                 <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-mb-5">Email</h3>
-                <a class="g-font-size-default g-color-white" href="mailto:info@cloudnative.site"><strong>info@cloudnative.site</strong></a>
+                <a class="g-font-size-default g-color-white" href="mailto:info@datadriven.jp"><strong>info@datadriven.jp</strong></a>
               </div>
               <div class="col-sm-3 g-brd-top g-brd-top-none--md g-brd-left--md g-brd-primary g-px-15 g-py-30 g-py-0--md">
                 <i class="icon-earphones-alt d-inline-block g-font-size-50 g-color-primary g-mb-20"></i>
                 <h3 class="text-uppercase g-font-size-default g-color-white-opacity-0_5 g-mb-5">Toll free</h3>
-                <strong class="g-font-size-default g-color-white">@cloudnative</strong>
+                <strong class="g-font-size-default g-color-white">@DataDriven</strong>
               </div>
             </div>
           </div>
@@ -1168,7 +1168,7 @@
             </form>
 
             <p class="g-font-size-12 mb-0">© 2018 All rights reserved. By
-              <a href="#" class="g-color-primary">CloudNative</a></p>
+              <a href="#" class="g-color-primary">DataDriven</a></p>
           </div>
         </div>
       </footer>
